<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="start_text">START</string>
    <string name="start_image_content_description_text">Start Image</string>
    <string name="get_ready_for_text">GET READY FOR</string>
    <string name="exercise_name_text">Exercise Name</string>
    <string name="exercise_image_text">TODO</string>
    <string name="upcoming_exercise_label_text">UPCOMING EXERCISE:</string>
    <string name="congratulation_text">Congratulation</string>
    <string name="you_have_done_the_workout_text">You have done the workout!</string>
    <string name="finish_text">Finish</string>
    <string name="image_shows_finish_text">Image shows finish</string>
    <string name="are_you_sure_text">Are you sure?</string>
    <string name="notification_text">This will stop your workout. You\'ve come this far, are you sure your want to quit?</string>
</resources>